--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,4 +2,6 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
 spring.datasource.password=
 
+
+spring.jpa.properties.hibernate.hbm2ddl.auto=update
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
